# mini-player

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: basic.vert
res/web/: index.html  index.js
src/: main.cpp
src/app/: App.cpp  App.hpp  Config.hpp
src/cef/: BrowserClient.cpp  BrowserClient.hpp  MiniCefApp.cpp  MiniCefApp.hpp  OSRRenderHandler.cpp  OSRRenderHandler.hpp
src/core/: SharedBuffer.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/utils/: Constants.hpp  Utils.cpp  Utils.hpp
src/video/: VideoDecoder.cpp  VideoDecoder.hpp
src/window/: EGLWindow.cpp  EGLWindow.hpp
